dynamodel_tests/tests/ui/fails/struct_unit.rs
use dynamodel::Dynamodel;

#[derive(Dynamodel)]
struct Unit;

fn main() {}
