dynamodel_tests/tests/ui/fails/struct_unit.stderr
error: Unsupported shape `no fields`. Expected named fields.
 --> tests/ui/fails/struct_unit.rs:3:10
  |
3 | #[derive(Dynamodel)]
  |          ^^^^^^^^^
  |
  = note: this error originates in the derive macro `Dynamodel` (in Nightly builds, run with -Z macro-backtrace for more info)
